add slider, video section, form

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -3,6 +3,9 @@
   height: 67px;
   background: #BE7F00;
   border-radius: 50px;
-	text-transform: uppercase;
 	border: none;
+  font-family: 'Montserrat';
+  font-weight: 700;
+  font-size: 20px;
+  color: #000000;
 }
