--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -51,3 +51,8 @@ ul {
 @import "blocks/buttons";
 @import "blocks/titles";
 @import "blocks/info";
+@import "blocks/slider";
+@import "blocks/composition";
+@import "blocks/video";
+@import "blocks/order";
+@import "blocks/forms";
